implementation of the customer's idea

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PINE</title>
-    <link rel="stylesheet" href="css/app.min.css?ver=0.0.10">
+    <link rel="stylesheet" href="css/app.min.css?ver=0.0.12">
 </head>
 <body>
 <header class="header" id="header">
@@ -12,7 +12,7 @@
     <div class="first-line">
         <div class="container">
             <div class="flex-block">
-                <a href="/" class="logo"><span class="logo__bold">Pi</span><span class="logo__thin">ne</span></a>
+                <a href="/" class="logo"><i class="logo__icon"></i><span class="logo__bold">Комплект</span><span class="logo__thin">снаб</span></a>
                 <nav class="menu">
                     <ul class="menu__container">
                         <li class="menu__item"><a href="#header" class="menu__link menu__link-active">Главная</a></li>
@@ -31,10 +31,11 @@
             <div class="header-content-df h100 aic">
                 <div class="header-content">
                     <div class="header-content__logo">
-                        <span class="logo__bold">Pi</span>
-                        <span class="logo__thin">ne</span>
+                        <span class="logo__bold">Комплект</span>
+                        <span class="logo__thin">снаб</span>
                     </div>
-                    <h1 class="header-content__h1">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+                    <h1 class="header-content__h1">ООО «Комплектснаб» приглашает к взаимовыгодному сотрудничеству в сфере
+                        комплексных поставок электротехнической продукции.</h1>
                     <p class="header-content__text">
                         Скачать прайс с актуальными ценами, на частотные товары, можно по кнопке ниже. За подробностями,
                         обращайтесь через форму.
@@ -129,22 +130,15 @@
                 <ul class="tabs__content-list aic">
                     <li class="tabs__content-item active-tabs-item">
                         <div class="tabs__contentText">
-                            <h2 class="tabs__contentHeader">1Tabs with soft transitioning effect.</h2>
+                            <h2 class="tabs__contentHeader">Выгодное сотрудничество.</h2>
                             <div class="tabs__contentWrapP">
-                                <p class="tabs__contentP">1Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Aenean euismod
-                                    bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
-                                    justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
-                                    penatibus et magnis dis parturient montes.</p>
-
-                                <p class="tabs__contentP">1Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Aenean euismod
-                                    bibendum laoreet.</p>
+                                <p class="tabs__contentP">Благодаря сотрудничеству с мировыми компаниями, наша фирма
+                                    может предложить Вам самый широкий ассортиментпродукции на российском рынке.</p>
                             </div>
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/city-mirror.webp" alt="city-mirror">
+                            <img src="img/dest/lamp-2663053.webp" alt="city-mirror">
                         </div>
                     </li>
                     <li class="tabs__content-item">
@@ -164,7 +158,7 @@
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/pipe1.webp" alt="city-mirror">
+                            <img src="img/dest/light-1246043.webp" alt="city-mirror">
                         </div>
                     </li>
                     <li class="tabs__content-item">
@@ -183,7 +177,7 @@
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/pipe2.webp" alt="city-mirror">
+                            <img src="img/dest/light-2156209_1920.webp" alt="city-mirror">
                         </div>
                     </li>
                 </ul>
@@ -195,7 +189,7 @@
         <div class="container">
             <div class="flex-block aic info__wrap">
                 <div class="info__img">
-                    <img src="img/dest/pipe5.webp" alt="#">
+                    <img src="img/dest/electrician-3087536_1920.jpg" alt="#">
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Sub list section</h2>
@@ -237,7 +231,7 @@
         <div class="container">
             <div class="flex-block aic info__wrap">
                 <div class="info__img">
-                    <img src="img/dest/pipe6.webp" alt="#">
+                    <img src="img/dest/light-bulbs-1125016.webp" alt="#">
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Standard Picture Section</h2>
@@ -255,7 +249,7 @@
         <div class="container">
             <div class="flex-block aic info__wrap">
                 <div class="info__img">
-                    <img src="img/dest/pipe5.webp" alt="#">
+                    <img src="img/dest/lightbulb-1875247_1920.webp" alt="#">
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Sub list section</h2>
@@ -297,7 +291,7 @@
         <div class="container">
             <div class="flex-block aic info__wrap">
                 <div class="info__img">
-                    <img src="img/dest/pipe6.webp" alt="#">
+                    <img src="img/dest/bulb-5665770.webp" alt="#">
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Standard Picture Section</h2>
@@ -316,7 +310,7 @@
         <div class="container">
             <div class="flex-block aic">
                 <div class="whyThis__header">
-                    <h2>WHY THIS IS AWESOME</h2>
+                    <h2>Почему мы лучшие?</h2>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
                 </div>
                 <ul class="whyThis__list">
@@ -362,7 +356,7 @@
         <div class="container">
             <div class="flex-block aic price__wrap">
                 <div class="price__header">
-                    <h2 class="price__headerH2">PRICING OPTIONS</h2>
+                    <h2 class="price__headerH2">Варианты сотрудничества</h2>
                     <h3 class="price__headerH3">Lorem ipsum dolor sit amet, consectetur adipiscing elite.</h3>
                 </div>
                 <ul class="price__list">
@@ -423,7 +417,7 @@
         <div class="container">
             <div class="flex-block aic say__wrap">
                 <div class="say__header">
-                    <h2 class="say__headerH2">WHAT OUR CUSTOMERS ARE SAYING</h2>
+                    <h2 class="say__headerH2">Что говорят о нас?</h2>
                     <h3 class="say__headerH3">Lorem ipsum dolor sit amet, consectetur adipiscing elite.</h3>
                 </div>
 
@@ -814,6 +808,6 @@
         </symbol>
     </defs>
 </svg>
-<script src="js/app.min.js?ver=0.0.10"></script>
+<script src="js/app.min.js?ver=0.0.12"></script>
 </body>
 </html>
