--- a/app/index.html
+++ b/app/index.html
@@ -646,6 +646,7 @@
                 </ul>
             </div>
             <div class="footer__copyright">© 2021 Denis Belotserkovets</div>
+            <a class="privacy-policy" href="http://stas/privacy-policy/">Политика конфиденциальности</a>
         </div>
     </div>
 </footer>
