--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PINE</title>
-    <link rel="stylesheet" href="css/app.min.css?ver=0.0.13">
+    <title>ООО "КомплектСнаб</title>
+    <link rel="stylesheet" href="css/app.min.css?ver=0.0.18">
+    <!--<link rel="stylesheet" href="css/critical.css?ver=0.0.17">-->
     <link rel="icon" href="https://googleman.ru/stas/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="https://googleman.ru/stas/favicon.png" type="image/x-icon">
 </head>
@@ -142,7 +143,7 @@
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/lamp-2663053.webp" alt="city-mirror">
+                            <img src="img/dest/lamp-2663053.webp" alt="city-mirror" loading="lazy" width="320" height="222.39">
                         </div>
                     </li>
                     <li class="tabs__content-item">
@@ -162,7 +163,7 @@
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/light-1246043.webp" alt="city-mirror">
+                            <img src="img/dest/light-1246043.webp" loading="lazy" alt="city-mirror" width="320" height="222.39">
                         </div>
                     </li>
                     <li class="tabs__content-item">
@@ -181,7 +182,7 @@
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
-                            <img src="img/dest/light-2156209_1920.webp" alt="city-mirror">
+                            <img src="img/dest/light-2156209_1920.webp" loading="lazy" alt="city-mirror" width="320" height="222.39">
                         </div>
                     </li>
                 </ul>
@@ -193,7 +194,7 @@
         <div class="container">
             <div class="flex-block aic info__wrap">
                 <div class="info__img">
-                    <img src="img/dest/electrician-3087536_1920.jpg" alt="#">
+                    <img src="img/dest/electrician-3087536_1920.jpg" alt="#" loading="lazy" width="400" height="267">
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Sub list section</h2>
@@ -235,7 +236,7 @@
         <div class="container">
             <div class="flex-block aic info__wrap">
                 <div class="info__img">
-                    <img src="img/dest/light-bulbs-1125016.webp" alt="#">
+                    <img src="img/dest/light-bulbs-1125016.webp" alt="#" loading="lazy" width="400" height="267">
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Standard Picture Section</h2>
@@ -253,7 +254,7 @@
         <div class="container">
             <div class="flex-block aic info__wrap">
                 <div class="info__img">
-                    <img src="img/dest/lightbulb-1875247_1920.webp" alt="#">
+                    <img src="img/dest/lightbulb-1875247_1920.webp" alt="#" loading="lazy" width="400" height="267">
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Sub list section</h2>
@@ -295,7 +296,7 @@
         <div class="container">
             <div class="flex-block aic info__wrap">
                 <div class="info__img">
-                    <img src="img/dest/bulb-5665770.webp" alt="#">
+                    <img src="img/dest/bulb-5665770.webp" alt="#" loading="lazy" width="400" height="267">
                 </div>
                 <div class="info__text">
                     <h2 class="info__header">Standard Picture Section</h2>
@@ -434,7 +435,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Jeremy H.</div>
                                     <div class="say__profession">Manager</div>
@@ -450,7 +451,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">John S.</div>
                                     <div class="say__profession">Freelancer</div>
@@ -466,7 +467,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Susan W.</div>
                                     <div class="say__profession">Photographer</div>
@@ -482,7 +483,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Jeremy H.</div>
                                     <div class="say__profession">Manager</div>
@@ -498,7 +499,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">John S.</div>
                                     <div class="say__profession">Freelancer</div>
@@ -514,7 +515,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Susan W.</div>
                                     <div class="say__profession">Photographer</div>
@@ -530,7 +531,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Jeremy H.</div>
                                     <div class="say__profession">Manager</div>
@@ -546,7 +547,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">John S.</div>
                                     <div class="say__profession">Freelancer</div>
@@ -562,7 +563,7 @@
                                 odio aspernatur ex, architecto eaque
                                 quo suscipit.</p>
                             <div class="say__user-container">
-                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                                <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3" loading="lazy"></div>
                                 <div class="say__user-container-data">
                                     <div class="say__name-user">Susan W.</div>
                                     <div class="say__profession">Photographer</div>
@@ -575,10 +576,10 @@
         </div>
     </div>
 </main>
+
 <footer class="footer" id="contact">
 
     <div class="contactInfo">
-
         <div class="container">
             <div class="flex-block aic contactInfo__wrap">
                 <div class="contactInfo__header">
@@ -868,8 +869,16 @@
         let YaMapsWP = {}, YMlisteners = {}
     }
 </script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+<div id="yandexMap"></div>
 <script>
+    setTimeout(() => {
+        let scr = document.createElement('script')
+        scr.setAttribute('src', 'https://api-maps.yandex.ru/2.1/?lang=ru_RU')
+        document.getElementById('yandexMap').appendChild(scr)
+    }, 5000)
+
+setTimeout(() => {
+
     ymaps.ready(init)
 
     let placemarks = [
@@ -899,7 +908,7 @@
                 },
                 {
                     iconLayout: `default#image`,
-                    iconImageHref: 'https://googleman.ru/map-logo.png',
+                    iconImageHref: 'https://googleman.ru/map-logo.webp',
                     iconImageSize: [120, 120],
                 })
         }
@@ -907,7 +916,7 @@
         let clusterer = new ymaps.Clusterer({
             clusterIcons: [
                 {
-                    href: 'https://googleman.ru/map-logo.png',
+                    href: 'https://googleman.ru/map-logo.webp',
                     size: [30, 30],
                     offset: [-50, -50]
                 }
@@ -918,7 +927,9 @@
         map.geoObjects.add(clusterer)
         clusterer.add(geoObjects)
     }
+    }, 6000)
 </script>
-<script src="js/app.min.js?ver=0.0.13"></script>
+<!--<link rel="stylesheet" href="css/async.css?ver=0.0.17">-->
+<script src="js/app.min.js?ver=0.0.18"></script>
 </body>
 </html>
